--- a/jenkinsfile
+++ b/jenkinsfile
@@ -3,7 +3,7 @@ node{
 def mavenHome = tool name: "maven3.9.2"
 
 echo "Buildnumber: ${env.BUILD_NUMBER}"
-echo "job name is: ${env.JOB_NAME}"
+//echo "job name is: ${env.JOB_NAME}"
 echo "Node name is: ${env.NODE_NAME}"
 
 properties([buildDiscarder(logRotator(artifactDaysToKeepStr: '', artifactNumToKeepStr: '', daysToKeepStr: '', numToKeepStr: '5')), [$class: 'JobLocalConfiguration', changeReasonComment: ''], pipelineTriggers([pollSCM('* * * * *')])])
@@ -16,7 +16,7 @@ url: 'https://github.com/shaikshab/maven-web-application.git'
 stage('Build'){
 sh "${mavenHome}/bin/mvn clean package"
 }
-
+/*
 stage('ExecuteSonarQubeReport'){
 sh "${mavenHome}/bin/mvn sonar:sonar"
 }
@@ -31,5 +31,5 @@ sshagent(['186fc075-9ae2-4b29-8527-0d9ead492c34']) {
   sh "scp -o StrictHostKeyChecking=no target/maven-web-application.war ec2-user@172.31.11.133:/opt/apache-tomcat-9.0.75/webapps/"
 }
 }
-
-}
+*/
+}//comment
