--- a/jenkinsfile
+++ b/jenkinsfile
@@ -2,13 +2,13 @@ node{
 
 def mavenHome = tool name: "maven3.9.2"
 
-echo "Buildnumber: ${env.BUILD_NUMBER}"
-//echo "job name is: ${env.JOB_NAME}"
+echo "Build number: ${env.BUILD_NUMBER}" 
+//echo "Job name is: ${env.JOB_NAME}"
 echo "Node name is: ${env.NODE_NAME}"
 
-properties([buildDiscarder(logRotator(artifactDaysToKeepStr: '', artifactNumToKeepStr: '', daysToKeepStr: '', numToKeepStr: '5')), [$class: 'JobLocalConfiguration', changeReasonComment: ''], pipelineTriggers([pollSCM('* * * * *')])])
-stage('CheckoutCode'){ 
-
+try{
+sendslacknotifications("STARTED")
+stage('CheckoutCode'){
 git branch: 'development', credentialsId: '870981ca-3296-4d6b-82a5-d8c001d3d7b4', 
 url: 'https://github.com/shaikshab/maven-web-application.git'
 }
@@ -16,7 +16,7 @@ url: 'https://github.com/shaikshab/maven-web-application.git'
 stage('Build'){
 sh "${mavenHome}/bin/mvn clean package"
 }
-/*
+ /*
 stage('ExecuteSonarQubeReport'){
 sh "${mavenHome}/bin/mvn sonar:sonar"
 }
@@ -24,6 +24,49 @@ sh "${mavenHome}/bin/mvn sonar:sonar"
 stage('UploadArtifactintoNexus')
 {
 sh "${mavenHome}/bin/mvn deploy"
+}
+
+stage('DeployAppIntoTomcatServer'){
+sshagent(['186fc075-9ae2-4b29-8527-0d9ead492c34']) {
+  sh "scp -o StrictHostKeyChecking=no target/maven-web-application.war ec2-user@172.31.11.133:/opt/apache-tomcat-9.0.75/webapps/"
+}
+}
+/*
+}//try closing
+catch(e){
+currentBuild.result = "FAILURE"
+}//catch block closing
+finally{
+sendslacknotifications(currentBuild.result)
+}//finally closing
+
+}//node closing
+
+
+def sendslacknotifications(String buildStatus = 'STARTED') {
+  // build status of null means successful
+  buildStatus =  buildStatus ?: 'SUCCESSFUL'
+
+  // Default values
+  def colorName = 'RED'
+  def colorCode = '#FF0000'
+  def subject = "${buildStatus}: Job '${env.JOB_NAME} [${env.BUILD_NUMBER}]'"
+  def summary = "${subject} (${env.BUILD_URL})"
+
+  // Override default values based on build status
+  if (buildStatus == 'STARTED') {
+    colorName = 'YELLOW'
+    colorCode = '#FFFF00'
+  } else if (buildStatus == 'SUCCESSFUL') {
+    colorName = 'GREEN'
+    colorCode = '#00FF00'
+  } else {
+    colorName = 'RED'
+    colorCode = '#FF0000'
+  }
+
+  // Send notifications
+  slackSend (color: colorCode, message: summary, channel: "#walmart")
 }
 
 stage('DeployAppIntoTomcatServer'){
